--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <ul>
           <li>
             <span class="icon"><i class="fa fa-phone" aria-hidden="true"></i></span>
-            <a href="">
+            <a href="https://chataja.me/DWIARYANTO">
               <span class="text">+62 81287958014</span>
             </a>
             
@@ -44,7 +44,7 @@
           </li>
           <li>
             <span class="icon"><i class="fa fa-linkedin" aria-hidden="true"></i></span>
-            <a href="https://www.linkedin.com/in/andikarna/">
+            <a href="https://www.linkedin.com/in/dwi-aryanto-b796a8291">
               <span class="text">www.linkedin.com/me</span>
             </a>
             
